--- a/todo-app/views/todos.ejs
+++ b/todo-app/views/todos.ejs
@@ -1,9 +1,16 @@
-<table>
-    <% for( var i = 0;i < allTodos.length;i++) {%>
+<table border='3'>
+    <tr>
+        <th>ID</th>
+        <th>Title</th>
+        <th>DueDate</th>
+        <th>Is Completed</th>
+    </tr>
+    <% for( var i = 0; i < allTodos.length; i++) { %>
         <tr>
-            <td>
-                <%= allTodos[i].title %>
-            </td>
+            <td><%=  allTodos[i].id %></td>
+            <td><%=  allTodos[i].title %></td>
+            <td><%=  allTodos[i].dueDate %></td>
+            <td><%=  allTodos[i].completed %></td>
         </tr>
-    <% }%>
+    <% } %>
 </table>
