--- a/todo-app/views/index.ejs
+++ b/todo-app/views/index.ejs
@@ -3,23 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My To-Do Application</title>
+    <title>To-Do Manager</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="/css/styles.css" />
 </head>
 <body>
-    <%- include('header.ejs') %>
     <%- include('todos.ejs') %>
-    <%- include('footer.ejs') %>
-
-    <!-- <table>
-        <% for( var i = 0;i < allTodos.length;i++) {%>
-            <tr>
-                <td>
-                    <%= allTodos[i].title %>
-                </td>
-            </tr>
-        <% }%>
-    </table> -->
 </body>
-</html>
+</html> 
