--- a/todo-app/views/todos.ejs
+++ b/todo-app/views/todos.ejs
@@ -32,11 +32,9 @@
         </form>
         <div>
             <h5>Overdue</h5>
-            <!-- <span
-            style="text-align: right"
-            id="count-due-today"
-            class="bg-gray-200 text-black font-semibold px-3 py-1 rounded font-medium mb-2 ml-2"
-            ><%= allTodos.filter(todo => todo.dueDate === new Date().toISOString().split('T')[0]).length %></span -->
+            <span
+            id="count-overdue"
+            ><%= allTodos.filter(todo => todo.dueDate < new Date().toISOString().split('T')[0]).length %></span
             <ul class="list-none">
                 <% for (var i = 0; i < allTodos.length; i++) { %>
                     <% if (allTodos[i].dueDate < new Date().toISOString().split('T')[0]) { %>
@@ -55,6 +53,9 @@
                 <% } %>
             </ul>
             <h5>Due Today</h5>
+            <span
+            id="count-due-today"
+            ><%= allTodos.filter(todo => todo.dueDate === new Date().toISOString().split('T')[0]).length %></span
             <ul class="list-none">
                 <% for (var i = 0; i < allTodos.length; i++) { %>
                     <% if (allTodos[i].dueDate === new Date().toISOString().split('T')[0]) { %>
@@ -74,6 +75,9 @@
             </ul>
             
             <h5>Due Later</h5>
+            <span
+            id="count-due-later"
+            ><%= allTodos.filter(todo => todo.dueDate > new Date().toISOString().split('T')[0]).length %></span
             <ul class="list-none">
                 <% for (var i = 0; i < allTodos.length; i++) { %>
                     <% if (allTodos[i].dueDate > new Date().toISOString().split('T')[0]) { %>
