--- a/todo-app/views/index.ejs
+++ b/todo-app/views/index.ejs
@@ -3,11 +3,88 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="csrf-token" content="<%= csrfToken %>" />
     <title>To-Do Manager</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="/css/styles.css" />
+    <script>
+        var token = document
+          .querySelector('meta[name="csrf-token"]')
+          .getAttribute("content");
+        function updateTodo(id) {
+            fetch(`/todos/${id}`,{
+                method:"put",
+                headers: { "Content-Type": "application/json"},
+                body: JSON.stringify({
+                    "_csrf":token,
+                    completed: true,
+                })
+            })
+              .then((res) =>{
+                if(res.ok){
+                    window.location.reload();
+                }
+            })
+            .catch((err) => console.error(err));
+        }
+         function updateTodo(id) {
+            fetch(`/todos/${id}`,{
+                method:"put",
+                headers: { "Content-Type": "application/json"},
+                body: JSON.stringify({
+                    "_csrf":token,
+                    completed: true,
+                })
+            })
+              .then((res) =>{
+                if(res.ok){
+                    window.location.reload();
+                }
+            })
+            .catch((err) => console.error(err));
+        }
+        function deleteTodo(id){
+            fetch(`/todos/${id}`,{
+                method:"delete",
+                headers: { "Content-Type": "application/json"},
+                body: JSON.stringify({
+                    "_csrf":token
+                })
+            })
+              .then((res) =>{
+                if(res.ok){
+                    window.location.reload();
+                }
+            })
+            .catch((err) => console.error(err));
+        }
+    </script>
 </head>
 <body>
-    <%- include('todos.ejs') %>
+    <div class="grid grid-cols-6">
+        <div class="col-start-3 col-span-2">
+            <%- include('header.ejs') %>
+            <form action="/todos" method="post">
+                <input type="hidden" name="_csrf" value="<%= csrfToken %>" />   
+                <div class="flex gap-2 py-4">
+                    <div class="flex-auto">
+                        <input type="text" name="title" placeholder="What's next?" class="border border-gray-300 rounded text-gray-900 w-full p-2 text-sm" required/>
+                    </div>
+                    <div class="flex-auto">
+                        <input type="date" name="dueDate" class="border border-gray-300 rounded text-gray-900 w-full p-2 text-sm leading-4" required/>
+                    </div>
+                    <div class="flex-none">
+                        <button type="submit" class="bg-green-600 text-white px-5 py-1.5 rounded font-medium">Add</button>
+                    </div>
+                </div>
+            </form>
+            <%- include("todos.ejs",{title:"Overdue",data:overdue}) %>
+            <%- include("todos.ejs",{title:"Due Today",data:dueToday}) %>
+            <%- include("todos.ejs",{title:"Due Later",data:dueLater}) %>
+            <%- include("todos.ejs",{title:"Completed Items",data:completed}) %>
+
+        </div>
+    </div>
+   
 </body>
 </html> 
