--- a/todo-app/views/todos.ejs
+++ b/todo-app/views/todos.ejs
@@ -1,100 +1,35 @@
-<!-- <table border='2'>
-    <tr>
-        <th>ID</th>
-        <th>Title</th>
-        <th>DueDate</th>
-        <th>Is Completed</th>
-    </tr>
-    <% for( var i = 0; i < allTodos.length; i++) { %>
-        <tr>
-            <td><%=  allTodos[i].id %></td>
-            <td><%=  allTodos[i].title %></td>
-            <td><%=  allTodos[i].dueDate %></td>
-            <td><%=  allTodos[i].completed %></td>
-        </tr>
-    <% } %>
-</table> -->
-<div class="grid grid-cols-6">
-    <div class="col-start-3 col-span-2">
-        <%- include('header.ejs') %> 
-        <form>
-            <div class="flex gap-2 py-4 ">
-                <div class="flex-auto">
-                    <input type="text" placeholder="What's next?" class="border border-gray-300 rounded text-gray-600 w-full p-2" required />   
-                </div>
-                <div class="flex-auto">
-                    <input type="date" class="border border-gray-300 rounded text-gray-600 w-full p-2 leading-4" />
-                </div>
-                <div class="flex-auto">
-                    <button type="submit" class="bg-green-600 text-white px-5 py-1.5 rounded font-medium mr-2 mb">Add</button>
-                </div>
-            </div>
-        </form>
-        <div>
-            <h5>Overdue</h5>
-            <span
-            id="count-overdue"
-            ><%= allTodos.filter(todo => todo.dueDate < new Date().toISOString().split('T')[0]).length %></span
-            <ul class="list-none">
-                <% for (var i = 0; i < allTodos.length; i++) { %>
-                    <% if (allTodos[i].dueDate < new Date().toISOString().split('T')[0]) { %>
-                        <li class="Todo-Item">
-                            <div class="flex items-center w-fit my-2 px-2 py-1 rounded hover:bg-purple-50">
-                                <input id="todo-checkbox-<%= i %>" type="checkbox" class="w-4 h-4 text-blue-600 bg-gr">
-                                <label for="todo-checkbox-<%= i %>" class="ml-2 text-sm text-gray-600 cursor-pointer"><%= allTodos[i].title %></label>
-                                <a href="#" class="hidden trash-icon ml-2">
-                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4">
-                                        <path stroke-linecap="round" stroke-linejoin="round" d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0" />
-                                    </svg>
-                                </a>
-                            </div>
-                        </li>
-                    <% } %>
-                <% } %>
-            </ul>
-            <h5>Due Today</h5>
-            <span
-            id="count-due-today"
-            ><%= allTodos.filter(todo => todo.dueDate === new Date().toISOString().split('T')[0]).length %></span
-            <ul class="list-none">
-                <% for (var i = 0; i < allTodos.length; i++) { %>
-                    <% if (allTodos[i].dueDate === new Date().toISOString().split('T')[0]) { %>
-                        <li class="Todo-Item">
-                            <div class="flex items-center w-fit my-2 px-2 py-1 rounded hover:bg-purple-50">
-                                <input id="todo-checkbox-<%= i %>" type="checkbox" class="w-4 h-4 text-blue-600 bg-gr">
-                                <label for="todo-checkbox-<%= i %>" class="ml-2 text-sm text-gray-600 cursor-pointer"><%= allTodos[i].title %></label>
-                                <a href="#" class="hidden trash-icon ml-2">
-                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4">
-                                        <path stroke-linecap="round" stroke-linejoin="round" d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0" />
-                                    </svg>
-                                </a>
-                            </div>
-                        </li>
-                    <% } %>
-                <% } %>
-            </ul>
-            
-            <h5>Due Later</h5>
-            <span
-            id="count-due-later"
-            ><%= allTodos.filter(todo => todo.dueDate > new Date().toISOString().split('T')[0]).length %></span
-            <ul class="list-none">
-                <% for (var i = 0; i < allTodos.length; i++) { %>
-                    <% if (allTodos[i].dueDate > new Date().toISOString().split('T')[0]) { %>
-                        <li class="Todo-Item">
-                            <div class="flex items-center w-fit my-2 px-2 py-1 rounded hover:bg-purple-50">
-                                <input id="todo-checkbox-<%= i %>" type="checkbox" class="w-4 h-4 text-blue-600 bg-gr">
-                                <label for="todo-checkbox-<%= i %>" class="ml-2 text-sm text-gray-600 cursor-pointer"><%= allTodos[i].title %></label>
-                                <a href="#" class="hidden trash-icon ml-2">
-                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4">
-                                        <path stroke-linecap="round" stroke-linejoin="round" d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0" />
-                                    </svg>
-                                </a>
-                            </div>
-                        </li>
-                    <% } %>
-                <% } %>
-            </ul>      
+<div>
+    <h5>
+      <%= title %> <span class="bg-gray-100 ml-2 px-2"><%= data.length %></span>
+    </h5>
+    <ul class="list-none">
+      <% for(var i = 0; i < data.length; i++) { %>
+      <li class="Todo-Item">
+        <div
+          class="flex items-center w-fit ml-2 py-1 px-2 my-2 rounded hover:bg-purple-50">
+          <input id = "todo-checkbox-<%= data[i].id %>"  type="checkbox" <%=data[i].completed ? "checked" : "" %> onclick="updateTodo(<%= data[i].id %>)",class="w-4 h-4 bg-gray-100 text-blue-600 rounded border-gray-300">
+          <label for = "todo-checkbox-<%= data[i].id %>"  class="ml-2 text-sm text-gray-600 curser-pointer">
+            <%= data[i].title %>
+          </label>
+          <a
+            href="#" class="hidden trash-icon ml-2" onclick="deleteTodo(<%= data[i].id %>)">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="w-4 h-4"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0"
+              />
+            </svg>
+          </a>
         </div>
-    </div>
-</div>
+      </li>
+      <% } %>
+    </ul>
+  </div>
