--- a/todo-app/views/todos.ejs
+++ b/todo-app/views/todos.ejs
@@ -7,7 +7,7 @@
       <li class="Todo-Item">
         <div
           class="flex items-center w-fit ml-2 py-1 px-2 my-2 rounded hover:bg-purple-50">
-          <input id = "todo-checkbox-<%= data[i].id %>"  type="checkbox" <%=data[i].completed ? "checked" : "" %> onclick="updateTodo(<%= data[i].id %>)",class="w-4 h-4 bg-gray-100 text-blue-600 rounded border-gray-300">
+          <input type="checkbox" id="checkbox-<%= data[i].id %>" <%=data[i].completed ? "checked" : "" %> onclick="updateTodo(<%= data[i].id %>)",class="w-4 h-4 bg-gray-100 text-blue-600 rounded border-gray-300">
           <label for = "todo-checkbox-<%= data[i].id %>"  class="ml-2 text-sm text-gray-600 curser-pointer">
             <%= data[i].title %>
           </label>
