--- a/todo-app/views/index.ejs
+++ b/todo-app/views/index.ejs
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,10 +13,11 @@
     <div class="grid grid-cols-6">
         <div class="col-start-3 col-span-2">
             <%- include('header.ejs') %>
-            <p class="py-2">Welcome to the To-Do Manager</p>
-            <p class="py-2">New here? <a href="/signUp" class="text-green-600">Sign-up now</a></p>
-            <p class="py-2">Already have an account? <a href="/login" class="text-green-600">Sign-in</a></p>
+            <p class="py-2">Welcome to the To-Do manager</p>
+            <p class="py-2">New here?<a href="/signup" class="text-green-600">Sign-up now</a></p>
+            <p class="py-2">Already have an account?<a href="/login" class="text-green-600">Sign-in</a></p>
         </div>
-   </div>
+    </div>
+   
 </body>
 </html> 
