--- a/todo-app/views/signup.ejs
+++ b/todo-app/views/signup.ejs
@@ -37,6 +37,13 @@
                     <button type="submit" class="text-white bg-green-600 hover:bg-green-800 font-medium rounded px-5 py-2">Sign Up</button>
                 </div>
             </form>
+            <div>
+                <% if(messages && messages.error && messages.error.length > 0)  { %>
+                    <% for(var i=0; i<messages.error.length; i++) { %>
+                            <li> <%= messages.error[i] %></li>
+                    <% } %>
+                  <% } %>
+            </div>
         </div>
     </div>
 </body>
