--- a/todo-app/views/login.ejs
+++ b/todo-app/views/login.ejs
@@ -17,6 +17,7 @@
             <h6 class="py-4">Login to you account</h6>
             <form action="/session" method="post">
                 <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+                <p class="py-2"><a href="/signup" class="text-green-600">Don't have an account?</a></p>
                 <div class="py-3">
                     <label for="email">Email:</label>
                     <input type="email" name="email" class="border border-gray-300 text-gray-900 rounded p-2 w-full">
