--- a/todo-app/views/signup.ejs
+++ b/todo-app/views/signup.ejs
@@ -17,6 +17,7 @@
             <h6 class="py-4">Signup as a new user</h6>
             <form action="/users" method="post">
                 <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+                <p class="py-2"><a href="/login" class="text-green-600">Already had an account?</a></p>
                 <div class="py-3">
                     <label for="firstName">First Name:</label>
                     <input type="text" name="firstName" class="border border-gray-300 text-gray-900 rounded p-2 w-full">
@@ -37,12 +38,28 @@
                     <button type="submit" class="text-white bg-green-600 hover:bg-green-800 font-medium rounded px-5 py-2">Sign Up</button>
                 </div>
             </form>
-            <div>
+            <!-- <div>
                 <% if(messages && messages.error && messages.error.length > 0)  { %>
                     <% for(var i=0; i<messages.error.length; i++) { %>
                             <li> <%= messages.error[i] %></li>
                     <% } %>
                   <% } %>
+            </div> -->
+            <div class="notify">
+                <div class="error">
+                    <% if(messages && messages.error && messages.error.length > 0)  { %>
+                        <% for(var i = 0; i < messages.error.length; i++) { %>
+                            <p> <%= messages.error[i] %></p>
+                        <% } %>
+                    <% } %>
+                </div>
+                <div class="success">
+                    <% if(messages && messages.success && messages.success.length > 0)  { %>
+                        <% for(var i = 0; i < messages.success.length; i++) { %>
+                            <p> <%= messages.success[i] %></p>
+                        <% } %>
+                    <% } %>
+                </div>
             </div>
         </div>
     </div>
