--- a/todo-app/views/todo.ejs
+++ b/todo-app/views/todo.ejs
@@ -49,7 +49,9 @@
     <div class="grid grid-cols-6">
         <div class="col-start-3 col-span-2">
             <%- include('header.ejs') %>
-            <p class="py-2"><a href="/signout" class="text-green-600">Sign-out</a></p>
+            <p class="py-2">
+                Welcome, <%= username %>!
+                <a href="/signout" class="text-green-600">Sign-out</a>
             <form action="/todos" method="post">
                 <input type="hidden" name="_csrf" value="<%= csrfToken %>" />   
                 <div class="flex gap-2 py-4">
