--- a/todo-app/views/todo.ejs
+++ b/todo-app/views/todo.ejs
@@ -48,7 +48,7 @@
 <body>
     <div class="grid grid-cols-6">
         <div class="col-start-3 col-span-2">
-            <%- include('header.ejs') %>
+            <p>My Todo-list</p>
             <p class="py-2">
                 Welcome, <%= username %>!
                 <a href="/signout" class="text-green-600">Sign-out</a>
